fix(content): fix unwanted horizontal scroll

--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -7,7 +7,6 @@ body {
     background-color: $background-color;
     color: #ffffff;
     width: calc(100vw -9px);
-    overflow-x: hidden;
 }
 
 a {
