--- a/src/app/design-specifications/design-specifications.module.scss
+++ b/src/app/design-specifications/design-specifications.module.scss
@@ -29,7 +29,7 @@
 
 .organisms {
     position: absolute;
-    width: 100vw;
+    width: calc(100vw - 12px);
     left: 0;
     z-index: -1;
     img {
