--- a/src/app/usecase-watch/usecase-watch.module.scss
+++ b/src/app/usecase-watch/usecase-watch.module.scss
@@ -27,12 +27,13 @@ $background-position: 200px;
 
 .rocket {
     position: absolute;
-    width: 100vw;
-    left: 0;
     z-index: -1;
+    width: calc(100% + 180px);
+    left: -180px;
     img {
         width: 100%;
-        transform: translate(-34vw,-130px);
+        position: relative;
+        left: -215px;
     }
 }
 
